<?xml version="1.0"?>
<package format="2">
  <name>cone_navigation</name>
  <version>1.0.0</version>
  <description>
    HIT-SZ Digital Image Processing Course Project: 
    Visual Navigation in Dense Cone Path using ROS and OpenCV.
  </description>

  <maintainer email="student@hit.edu.cn">Li Weiqi</maintainer>
  <maintainer email="student@hit.edu.cn">Wang Pengyu</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>